--- a/crud-bank-app/src/main/resources/application.properties
+++ b/crud-bank-app/src/main/resources/application.properties
@@ -1,13 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/crud-bank?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.application.name=crud-bank-app
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/crud_bank_db?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto=update
-
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-
-server.error.include-stacktrace=never
-
