--- a/transaction-data-service/src/main/resources/application.properties
+++ b/transaction-data-service/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/transaction_db?serverTimezone=
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
- 
